Fixed gap; completed header and link styling

--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,12 @@
   src: url('fonts/roboto/Roboto-Regular.ttf') format('truetype');
 }
 
+@font-face {
+  font-family: roboto;
+  src: url('fonts/roboto/Roboto-Bold.ttf') format('truetype');
+  font-weight: bold;
+}
+
 * {
   font-family: roboto;
 }
@@ -13,22 +19,34 @@ h1, h2, h3, h4, h5, h6, p {
   color: rgba(0, 0, 0, 0.87);
 }
 
+a:link, a:visited {
+  color: #448AFF;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #2979FF;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+a:active {
+  color: #2979FF;
+}
+
 /* GLOBAL */
 
-html {
+body, html {
   padding: 0px;
   margin: 0px;
 }
 
 body {
-  padding: 0px;
-  margin: 0px;
+  margin: auto;
 }
 
-.content {
-  width: 1024px;
-  margin: auto;
-  padding-top: 
+h1 {
+  margin-top: 5px;
 }
 
 .header-background {
@@ -36,7 +54,19 @@ body {
   width: 100;
 }
 
-*[role="button"] {
-  color
+.content {
+  width: 1024px;
+  margin: 0 auto;
 }
+
+.head {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+*[role="button"] {
+  color: #448AFF;
+}
+
+
 
